Closed Bug 1383585 Opened 7 years ago Closed 7 years ago

Intermittent Windows x64 browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | Test timed out

Categories

(Core :: WebRTC, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox56 --- fixed
firefox57 --- fixed

People

(Reporter: aryx, Assigned: ng)

References

Details

(Keywords: intermittent-failure, Whiteboard: [stockwell fixed:product])

Attachments

(2 files, 3 obsolete files)

https://treeherder.mozilla.org/logviewer.html#?job_id=116197605&repo=autoland

This seems to be the first failure: https://treeherder.mozilla.org/#/jobs?repo=autoland&revision=19d88925c81f10e5e7704c0a01970090406e0266&filter-resultStatus=testfailed&filter-resultStatus=busted&filter-resultStatus=exception&filter-resultStatus=retry&filter-resultStatus=usercancel&filter-resultStatus=runnable&filter-resultStatus=success&filter-searchStr=windows%20x64%20browser-chrome&selectedJob=116197605

17:56:07     INFO - TEST-PASS | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | WebRTC indicator visible - 
17:56:07     INFO - TEST-PASS | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | camera global indicator as expected - 
17:56:07     INFO - TEST-PASS | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | microphone global indicator as expected - 
17:56:07     INFO - TEST-PASS | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | screen global indicator as expected - 
17:56:07     INFO - TEST-PASS | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | WebRTC menu should be visible - 
17:56:07     INFO - TEST-PASS | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | popup WebRTC indicator visible - 
17:56:07     INFO - TEST-PASS | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | video global indicator attribute as expected - 
17:56:07     INFO - TEST-PASS | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | audio global indicator attribute as expected - 
17:56:07     INFO - TEST-PASS | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | screen global indicator attribute as expected - 
17:56:07     INFO - TEST-PASS | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | only one global indicator window - 
17:56:07     INFO - requesting devices
17:56:07     INFO - Buffered messages finished
17:56:07     INFO - TEST-UNEXPECTED-FAIL | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | Test timed out - 
17:56:07     INFO - GECKO(2580) | MEMORY STAT | vsize 1935MB | vsizeMaxContiguous 6447877MB | residentFast 299MB | heapAllocated 114MB
17:56:07     INFO - TEST-OK | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | took 90167ms
17:56:07     INFO - Not taking screenshot here: see the one that was previously logged
17:56:07     INFO - TEST-UNEXPECTED-FAIL | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | Found a tab after previous test timed out: https://example.com/browser/browser/base/content/test/webrtc/get_user_media.html - 
17:56:07     INFO - GECKO(2580) | ++DOCSHELL 0000001D94070000 == 9 [pid = 2580] [id = {1a460c7d-3fe9-4d4c-9b76-f350393e1605}]
17:56:07     INFO - GECKO(2580) | ++DOMWINDOW == 17 (0000001D94077000) [pid = 2580] [serial = 111] [outer = 0000000000000000]
17:56:07     INFO - GECKO(2580) | ++DOMWINDOW == 18 (0000001D94088000) [pid = 2580] [serial = 112] [outer = 0000001D94077000]
17:56:07     INFO - checking window state
17:56:07     INFO - Not taking screenshot here: see the one that was previously logged
17:56:07     INFO - TEST-UNEXPECTED-FAIL | browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js | Found a Browser:WebRTCGlobalIndicator after previous test timed out -
Rank: 35
Priority: -- → P3
this is failing on win* debug, I think the 17 failures in 1 day was catching up on older failures, but the rate is still worth looking at someting in the next 2 weeks.
Whiteboard: [stockwell needswork]
All failures are Windows and Debug. Failure rate is frequent and consistent since about July 22.

https://treeherder.mozilla.org/#/jobs?repo=autoland&filter-searchStr=windows%20debug%20browser-chrome&tochange=6c77cacaf82d169e8e7f557f2f14cae275f3410f&fromchange=4f240a4f635b71a641d45cd2c4d891600954edf3 suggests this started with the change for bug 1371000.

:ng -- Please have a look.
Blocks: 1371000
Flags: needinfo?(na-g)
Geoff, I will look into this today.
Assignee: nobody → na-g
See Also: → 1350476
I believe I can reproduce this locally. Still investigating.
This is permafailing on Beta since the uplift on Wednesday.
Making notes here:
Setup: Using a loaner a t-w864-ix via VNC at the default resolution of 1600x1200. Screen sharing slows the responsiveness of the Windows UI to crawl. Mouse inputs have a delay on the order of 10s. This begins as soon as the preview screen capture in gUM begins. Firefox remains at very low CPU utilization of ~3.5%, and the overall system load is also low at around ~12%.
Additional notes:
Setup: as in comment 22, except that resolution is set to 1024x768. Screen sharing does not appreciably slow the responsiveness of the Windows UI.
Attachment #8894711 - Attachment is obsolete: true
Comment on attachment 8898071 [details]
Bug 1383585 - extend device cache period for Win8;

https://reviewboard.mozilla.org/r/169380/#review174888
Attachment #8898071 - Flags: review?(jib) → review+
Attachment #8898071 - Attachment is obsolete: true
Comment on attachment 8898394 [details]
Bug 1383585 - add logs for device cache in VideoEngine;

https://reviewboard.mozilla.org/r/169788/#review175032

Looks good, but something seems screwy with the way this is pushed to review, as it replaced the first patch instead of coming on top of it. If you re-push with one commit on top of the other, they should both appear in the review and the bug.
Attachment #8898394 - Flags: review?(jib) → review+
Attachment #8898394 - Attachment is obsolete: true
Attachment #8898071 - Attachment is obsolete: false
Comment on attachment 8898632 [details]
Bug 1383585 - extend device cache period for Win8;

dupe
Attachment #8898632 - Attachment is obsolete: true
Attachment #8898632 - Flags: review?(jib)
Attachment #8898394 - Attachment is obsolete: false
Flags: needinfo?(na-g)
Keywords: checkin-needed
Flags: needinfo?(na-g)
This patch doesn't meet the review requirements in MozReview for Autoland to push it.
http://mozilla-version-control-tools.readthedocs.io/en/latest/mozreview/autoland.html#landing-commits
Keywords: checkin-needed
Both patches are discarded for some reason, and still separate review requests.
Attachment #8898071 - Attachment is obsolete: true
Attachment #8898394 - Attachment is obsolete: true
Comment on attachment 8898632 [details]
Bug 1383585 - extend device cache period for Win8;

https://reviewboard.mozilla.org/r/170012/#review175450
Attachment #8898632 - Flags: review?(jib) → review+
Comment on attachment 8898897 [details]
Bug 1383585 - add logs for device cache in VideoEngine;

https://reviewboard.mozilla.org/r/170244/#review175452
Attachment #8898897 - Flags: review?(jib) → review+
Pushed by jbruaroey@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b57b8a2f06c7
extend device cache period for Win8;r=jib
https://hg.mozilla.org/integration/autoland/rev/26dccd20e69b
add logs for device cache in VideoEngine;r=jib
https://hg.mozilla.org/mozilla-central/rev/b57b8a2f06c7
https://hg.mozilla.org/mozilla-central/rev/26dccd20e69b
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Please request Beta approval on this when you get a chance.
Comment on attachment 8898632 [details]
Bug 1383585 - extend device cache period for Win8;

Approval Request Comment
[Feature/Bug causing the regression]: Bug 1371000
[User impact if declined]: browser_devices_get_user_media.js will continue to fail on try
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: the testing procedure outlined in bug 1371000
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: it is a very small patch which extends the duration of a preexisting cache which was already landed with Bug 1371000
[String changes made/needed]: none
Flags: needinfo?(na-g)
Attachment #8898632 - Flags: approval-mozilla-beta?
Comment on attachment 8898632 [details]
Bug 1383585 - extend device cache period for Win8;

Fix an intermittent-failure. Beta56+.
Attachment #8898632 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Whiteboard: [stockwell needswork] → [stockwell fixed:product]
You need to log in before you can comment on or make changes to this bug.