Bug 1383585 - Add logs for device cache in VideoEngine. r=jib, a=gchang

MozReview-Commit-ID: 9hRSSwSUuuC